--- a/index.html
+++ b/index.html
@@ -26,18 +26,24 @@
 
     <div class="container">
       <div class="boxContainer">
-        <div class="logo box">Logo</div>
+        <div class="logo box">
+          Logo
+          <!-- <img src="./Img/pin.png" alt="Pinterest Logo" > -->
+        </div>
         <div class="button box">
-          <button class="button">
-            <a href="https://www.pinterest.com.mx">Inicio</a>
-          </button>
+          <a href="https://www.pinterest.com.mx" id="">Inicio</a>
         </div>
         <div class="today box">Hoy</div>
-        <div class="searchBox"></div>
-        <div class="lateralControls">
+        <div class="search box">
+          <input type="search" id="search" placeholder="Buscar" />
+        </div>
+        <div class="lateralControls box">
+          <div class="bell box">B</div>
+          <div class="inbox box">M</div>
+          <div class="profile box"></div>
+          <div class="more box"></div>
         </div>
       </div>
     </div>
-
   </body>
 </html>
