Adding left boxes in the nav bar

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <div class="lateralControls box">
           <div class="bell box">B</div>
           <div class="inbox box">M</div>
-          <div class="profile box"></div>
-          <div class="more box"></div>
+          <div class="profile box">P</div>
+          <div class="more box">+</div>
         </div>
       </div>
     </div>
