--- a/index.html
+++ b/index.html
@@ -11,35 +11,35 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="icon" href="./Img/pinterest.ico" type="favicon">  
+    <link rel="icon" href="./Img/pinterest.ico" type="favicon" />
     <link rel="stylesheet" href="main.css" />
     <title>Pinterest</title>
   </head>
   <body>
-
-<nav id="navbar-pinterest">
-<div class="container">
-      <div class="boxContainer">
-        <div class="logo box">
-          <i class="fab fa-pinterest"></i>
+    <header>
+      <nav id="navbar-pinterest">
+        <div class="container">
+          <div class="boxContainer">
+            <div class="logo box">
+              <i class="fab fa-pinterest"></i>
+            </div>
+            <div class="button box">
+              <a href="https://www.pinterest.com.mx" id=""><b>Inicio</b></a>
+            </div>
+            <div class="today box">Hoy</div>
+            <div class="search box">
+              <form action="" class="box">
+                <input type="search" id="search" placeholder=" Buscar" />
+              </form>
+            </div>
+            <div class="lateralControls box">
+              <div class="bell box"><i class="fas fa-bell"></i></div>
+              <div class="inbox box"><i class="fas fa-comment-dots"></i></div>
+              <div class="profile box"><i class="fas fa-user-circle"></i></div>
+            </div>
+          </div>
         </div>
-        <div class="button box">
-          <a href="https://www.pinterest.com.mx" id="">Inicio</a>
-        </div>
-        <div class="today box">Hoy</div>
-        <div class="search box">
-          <form action="" class="box">
-            <input type="search" id="search" placeholder="Buscar" />
-          </form>
-        </div>
-        <div class="lateralControls box">
-          <div class="bell box"><i class="fas fa-bell"></i></div>
-          <div class="inbox box"><i class="fas fa-comment-dots"></i></div>
-          <div class="profile box"><i class="fas fa-user-circle"></i></div>
-        </div>
-      </div>
-    </div>
-</nav#>
-    
+      </nav>
+    </header>
   </body>
 </html>
