--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
         <div class="element">Uno</div>
         <div class="element">Dos</div>
         <div class="element">Tres</div>
+        <div class="element">Cuatro</div>
+
       </div>
     </article>
   </body>
