Adding the grid, and images

--- a/index.html
+++ b/index.html
@@ -53,111 +53,166 @@
     </header>
     <article>
       <div class="grid">
-        <div class="grid-item">
-          <img src="https://images.unsplash.com/photo-1631270275227-0abd3ad56b34?ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMjJ8fHxlbnwwfHx8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=300&q=60" alt="1">
+        <div class="card-image">
+          <img
+          src="https://images.unsplash.com/photo-1562620814-bd91818350e3?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80" alt="1"
+          />
+          <div>
+            <button class="save">Guardar</button>
+          </div>
+          <div class="icons">
+            <div class="icon box">
+              <i class="fas fa-upload"></i>
+            </div>
+            <div class="icon box">
+              <i class="fas fa-ellipsis-h"></i>
+            </div>
+          </div>
         </div>
-        <div class="grid-item">
-          <img src="https://images.unsplash.com/photo-1618872256480-0a79dfd8da35?ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMjB8fHxlbnwwfHx8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=300&q=60" alt="2">
+        <div class="card-image">
+          <img
+          src="https://images.unsplash.com/photo-1631285530225-b6f7a82d6de9?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMjV8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=300&q=60"
+          alt="2"
+          />
         </div>
-        <div class="grid-item">
-          <img src="https://images.unsplash.com/photo-1552025800-a8c212a05ee7?ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMjF8fHxlbnwwfHx8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=300&q=60" alt="3">
-        </div>
-        <div class="grid-item">
-          <img src="https://images.unsplash.com/photo-1631285530225-b6f7a82d6de9?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMjV8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=300&q=60" alt="4">
-        </div>
-        <div class="grid-item">
-          <img src="https://images.unsplash.com/photo-1631237591074-e9b68e267dfb?ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMjR8fHxlbnwwfHx8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=300&q=60" alt="5">
-        </div>
-        <div class="grid-item">
-          <img src="https://images.unsplash.com/photo-1631260947893-1e29516d5183?ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMjN8fHxlbnwwfHx8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=300&q=60" alt="6">
-        </div>
-        <div class="grid-item">
-          <img src="https://images.unsplash.com/photo-1631116617822-e100bd7e6e06?ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMjd8fHxlbnwwfHx8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=300&q=60" alt="7">
-        </div>
-        <div class="grid-item">
-          <img src="https://images.unsplash.com/photo-1631287381310-925554130169?ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMjZ8fHxlbnwwfHx8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=300&q=60" alt="8">
-        </div>
-        <div class="grid-item">
-          <img src="https://images.unsplash.com/photo-1631125915510-8ffed5a0d054?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMjl8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=300&q=60" alt="9">
-        </div>
-        <div class="grid-item">
-          <img src="https://images.unsplash.com/photo-1631281272758-87dfd93198ad?ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMzB8fHxlbnwwfHx8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=300&q=60" alt="10">
-        </div>
-        <div class="grid-item">
-          <img src="https://images.unsplash.com/photo-1628191078376-f31a36c9f2cf?ixid=MnwxMjA3fDF8MHxlZGl0b3JpYWwtZmVlZHwxMjh8fHxlbnwwfHx8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=300&q=60" alt="11">
-        </div>
-        <div class="grid-item">
-          <img src="https://images.unsplash.com/photo-1631281272758-87dfd93198ad?ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMzB8fHxlbnwwfHx8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=300&q=60" alt="12">
-        </div>
-        <div class="grid-item">
-          <img src="https://images.unsplash.com/photo-1631272267948-a7debdbeab9a?ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxNDN8fHxlbnwwfHx8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=300&q=60" alt="13">
-        </div>
-        <div class="grid-item">
-          <img src="https://images.unsplash.com/photo-1631114611403-d986a927718d?ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxNDh8fHxlbnwwfHx8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=300&q=60" alt="13">
-        </div>
-        <div class="grid-item">
-          <img src="https://images.unsplash.com/photo-1631270275663-b9606b854141?ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxNDd8fHxlbnwwfHx8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=300&q=60" alt="14">
-        </div>
-        <div class="grid-item">
-          <img src="https://images.unsplash.com/photo-1631270635726-88a48e3e6d92?ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxNDl8fHxlbnwwfHx8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=300&q=60" alt="15">
-        </div>
-        <div class="grid-item">
-          <img src="https://images.unsplash.com/photo-1631264508765-b49496f3f45d?ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxNTN8fHxlbnwwfHx8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=300&q=60" alt="16">
-        </div>
-        <div class="grid-item">
-          <img src="https://images.unsplash.com/photo-1631264508765-b49496f3f45d?ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxNTN8fHxlbnwwfHx8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=300&q=60" alt="17">
-        </div>
-        <div class="grid-item">
-          <img src="https://images.unsplash.com/photo-1630922786380-1fab8bf4903a?ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxNTh8fHxlbnwwfHx8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=300&q=60" alt="18">
-        </div>
-        <div class="grid-item">
-          <img src="" alt="19">
-        </div><div class="grid-item">
-          <img src="" alt="20">
-        </div>
-        <div class="grid-item">
-          <img src="" alt="21">
-        </div>
-        <div class="grid-item">
-          <img src="" alt="22">
-        </div>
-        <div class="grid-item">
-          <img src="" alt="23">
-        </div>
-        <div class="grid-item">
-          <img src="" alt="23">
-        </div>
-        <div class="grid-item">
-          <img src="" alt="24">
-        </div>
-        <div class="grid-item">
-          <img src="" alt="25">
-        </div>
-        <div class="grid-item">
-          <img src="" alt="26">
-        </div>
-        <div class="grid-item">
-          <img src="" alt="27">
-        </div>
-        <div class="grid-item">
-          <img src="" alt="28">
-        </div>
-        <div class="grid-item">
-          <img src="" alt="29">
-        </div><div class="grid-item">
-          <img src="" alt="30">
+        <div class="card-image">
+          <img
+            clas
+            src="https://images.unsplash.com/photo-1631270275227-0abd3ad56b34?ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMjJ8fHxlbnwwfHx8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=300&q=60"
+            alt="3"
+          />
         </div>
         
-        ...
+        <div class="card-image">
+          <img
+          src="https://images.unsplash.com/photo-1552025800-a8c212a05ee7?ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMjF8fHxlbnwwfHx8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=300&q=60"
+          alt="4"
+          />
+        </div>
+        <div class="card-image">
+          <img
+            src="https://images.unsplash.com/photo-1631260947893-1e29516d5183?ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMjN8fHxlbnwwfHx8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=300&q=60"
+            alt="5"
+          />
+        </div>
+        <div class="card-image">
+          <img
+            src="https://images.unsplash.com/photo-1631116617822-e100bd7e6e06?ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMjd8fHxlbnwwfHx8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=300&q=60"
+            alt="6"
+          />
+        </div>
+        <div class="card-image">
+          <img
+            src="https://images.unsplash.com/photo-1631237591074-e9b68e267dfb?ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMjR8fHxlbnwwfHx8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=300&q=60"
+            alt="7"
+          />
+        </div>
+        <div class="card-image">
+          <img
+            src="https://images.unsplash.com/photo-1631287381310-925554130169?ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMjZ8fHxlbnwwfHx8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=300&q=60"
+            alt="8"
+          />
+        </div>
+        <div class="card-image">
+          <img
+            src="https://images.unsplash.com/photo-1631125915510-8ffed5a0d054?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMjl8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=300&q=60"
+            alt="9"
+          />
+        </div>
+        <div class="card-image">
+          <img
+            src="https://images.unsplash.com/photo-1631281272758-87dfd93198ad?ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMzB8fHxlbnwwfHx8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=300&q=60"
+            alt="10"
+          />
+        </div>
+        <div class="card-image">
+          <img
+            src="https://images.unsplash.com/photo-1628191078376-f31a36c9f2cf?ixid=MnwxMjA3fDF8MHxlZGl0b3JpYWwtZmVlZHwxMjh8fHxlbnwwfHx8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=300&q=60"
+            alt="11"
+          />
+        </div>
+        <div class="card-image">
+          <img
+            src="https://images.unsplash.com/photo-1631281272758-87dfd93198ad?ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMzB8fHxlbnwwfHx8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=300&q=60"
+            alt="12"
+          />
+        </div>
+        <div class="card-image">
+          <img
+            src="https://images.unsplash.com/photo-1631272267948-a7debdbeab9a?ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxNDN8fHxlbnwwfHx8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=300&q=60"
+            alt="13"
+          />
+        </div>
+        <div class="card-image">
+          <img
+            src="https://images.unsplash.com/photo-1631270275663-b9606b854141?ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxNDd8fHxlbnwwfHx8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=300&q=60"
+            alt="14"
+          />
+        </div>
+        <div class="card-image">
+          <img
+            src="https://images.unsplash.com/photo-1631270635726-88a48e3e6d92?ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxNDl8fHxlbnwwfHx8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=300&q=60"
+            alt="15"
+          />
+        </div>
+        <div class="card-image">
+          <img
+            src="https://images.unsplash.com/photo-1616004673271-d45d9d856715?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80"
+            alt="16"
+          />
+        </div>
+        <div class="card-image">
+          <img
+            src="https://images.unsplash.com/photo-1631264508765-b49496f3f45d?ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxNTN8fHxlbnwwfHx8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=300&q=60"
+            alt="17"
+          />
+        </div>
+        <div class="card-image">
+          <img src="https://images.unsplash.com/photo-1631451725131-d79ddd78da8f?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=80" alt="18" />
+        </div>
+        <div class="card-image">
+          <img src="https://images.unsplash.com/photo-1631373906054-5b88d46b82b5?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=749&q=80" alt="19" />
+        </div>
+        <div class="card-image">
+          <img src="https://images.unsplash.com/photo-1553272725-086100aecf5e?ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=401&q=80" alt="20" />
+        </div>
+        <div class="card-image">
+          <img src="https://images.unsplash.com/photo-1631463458036-6ffaa4e3d75b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=80" alt="21" />
+        </div>
+        <div class="card-image">
+          <img src="https://images.unsplash.com/photo-1631466266525-53e979c9e29b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=751&q=80" alt="22" />
+        </div>
+        
+        <div class="card-image">
+          <img src="https://images.unsplash.com/photo-1631456715790-d4bc4ffe54d0?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=751&q=80" alt="23" />
+        </div>
+        <div class="card-image">
+          <img src="https://images.unsplash.com/photo-1631457359601-35255895566f?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80" alt="24" />
+        </div>
+        <div class="card-image">
+          <img src="https://images.unsplash.com/photo-1631457359601-35255895566f?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80" alt="25" />
+        </div>
+        <div class="card-image">
+          <img
+            src="https://images.unsplash.com/photo-1630922786380-1fab8bf4903a?ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxNTh8fHxlbnwwfHx8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=300&q=60"
+            alt="26"
+          />
+        </div>
+        <div class="card-image">
+          <img src="https://images.unsplash.com/photo-1559163499-413811fb2344?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=750&q=80" alt="27" />
+        </div>
+        <div class="card-image">
+          <img src="https://images.unsplash.com/photo-1618872256480-0a79dfd8da35?ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxMjB8fHxlbnwwfHx8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=300&q=60"
+            alt="28" />
+
+        </div>
+        <div class="card-image">
+          <img src="https://images.unsplash.com/photo-1631159614310-19296c53489b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=338&q=80" alt="29" />
+        </div>
+        <div class="card-image">
+          <img src="https://images.unsplash.com/photo-1631255341981-9221526ca7f9?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=754&q=80" alt="30" />
+        </div>
       </div>
-      <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
-      <script>
-        var elem = document.querySelector(".grid");
-        var msnry = new Masonry(elem, {
-          // options
-          itemSelector: ".grid-item",
-        });
-      </script>
     </article>
   </body>
 </html>
